# stock_signalight

./: .env.example  .gitattributes  BATCH1_IMPLEMENTATION.md  CLAUDE.md  COMPREHENSIVE_PHASE_PLANS.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MASTER_ROADMAP.md  PHASE10_PLAN.md  PHASE11-25_IMPLEMENTATION.md  PHASE11_PLAN.md  PHASE9_FEATURES.md  PHASE9_PLAN.md  PHASE9_SUMMARY.md  README.md  TASKS.md  push.sh  skills-lock.json  vercel.json
signalight-engine/: .env.example  .gitignore  migrate.py  pyproject.toml  railpack.json  requirements.txt  signalight-engine-Tasks.md  supabase_setup.sql  test_telegram.py  validate.py
signalight-engine/data/: signalight.db-shm  signalight.db-wal
signalight-engine/migrations/: 001_initial_schema.sql  002_seed_defaults.sql
signalight-engine/src/: __init__.py  advanced_features.py  advanced_trading.py  ai_signals.py  alert.py  alerts_advanced.py  alerts_checker.py  api.py  app.py  auth.py  auto_trade_service.py  backtest.py  backtesting.py  broker_integrations.py  command.py  community.py  config.py  courses.py  data_export.py  error_handlers.py  main.py  market.py  market_data.py  news_data.py  news_service.py  notifier.py  options_analysis.py  portfolio.py  portfolio_analyzer.py  pulse.py  realtime_updates.py  risk_management.py  routes_broker.py  routes_dashboard.py  routes_export.py  routes_settings.py  stock_screener.py  store.py  trigger.py
signalight-engine/tests/: test_alert.py  test_app.py  test_command.py  test_market.py  test_pulse.py  test_store.py  test_trigger.py
(+102 files in other folders)
