[project]
name = "signalight-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
dependencies = [
    "aiosqlite>=0.22.1",
    "pandas>=3.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "ta>=0.11.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
